--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edmundo Moreira</title>
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="OpenSans/">
 </head>
@@ -43,12 +43,15 @@
                 </div>
             </div>
         </div>
-        <div id="container3">
+    <div id="container3">
+        <div id="container31">
             <h1 class="titulo2">SOBRE</h1>
-            <p class="subtitulo2">Olá! Meu nome é Edmundo e sou estudante de Design</p>
+            <p class="subtitulo2">Olá! Meu nome é Edmundo Moreira e sou estudante de Design na Universidade Federal do Espirito Santo (UFES)</p>
         </div>
         <div id="container4">
+
         </div>
+    </div>
     </div>
 </body>
 </html>
