--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,18 @@
                 <h1 class="titulo">PORTFÓLIO</h1>
                 <p class="subtitulo">Essas são minhas redes utilizadas como portfólio!</p>
             </div>
-            <div id="container21">
-                <div id="container211">
+            <div class="container21">
+                <div class="container211">
                     <a href="https://www.behance.net/edmundomoreira" target="_blank"><img src="behance.svg" class="icone"></a>
                     <p class="descricaocontainer21">BEHANCE</p>
                     <p>Design gráfico</p>
                 </div>
-                <div id="container212">
+                <div class="container212">
                     <a href="https://github.com/edmundomsj" target="_blank"><img src="github.svg" class="icone"></a>
                     <p class="descricaocontainer21">GITHUB</p>
                     <p>Webdesign</p>
                 </div>
-                <div id="container213">
+                <div class="container213">
                     <a href="https://www.instagram.com/eldrow.art/" target="_blank"><img src="instagram.svg" class="icone"></a>
                     <p class="descricaocontainer21">INSTAGRAM</p>
                     <p>Ilustrações</p>
@@ -46,12 +46,66 @@
     <div id="container3">
         <div id="container31">
             <h1 class="titulo2">SOBRE</h1>
-            <p class="subtitulo2">Olá! Meu nome é Edmundo Moreira e sou estudante de Design na Universidade Federal do Espirito Santo (UFES)</p>
+            <p class="subtitulo2">Olá! Meu nome é Edmundo Moreira, tenho 21 anos e sou estudante de Design na Universidade Federal do Espirito Santo (UFES). Eventualmente faço ilustrações, peças gráficas, e atualmente explorando cada vez mais o lado da programação almejando ser um excelente Webdesigner.</p>
         </div>
-        <div id="container4">
+        <div id="container32">
+            <img src="edmundo.png" id="edmundo">
+        </div>
+    </div>
 
+    <div id="container33">
+
+        <div class="container21">
+            <div class="container211">
+                <img src="html5.svg" class="icone">
+                <p class="descricaocontainer21">HTML</p>
+                <p>Intermediário</p>       
+            </div>
+
+            <div class="container212">
+                <img src="css3.svg" class="icone">
+                <p class="descricaocontainer21">CSS</p>
+                <p>Intermediário</p>
+            </div>
+
+            <div class="container213">
+                <img src="javascript.svg" class="icone">
+                <p class="descricaocontainer21">JAVASCRIPT</p>
+                <p>Básico</p>
+            </div>
+        </div>
+
+        <div class="container21">
+            <div class="container211">
+                <img src="photoshop.svg" class="icone">
+                <p class="descricaocontainer21">PHOTOSHOP</p>
+                <p>Intermediário</p>
+            </div>
+
+            <div class="container212">
+                <img src="illustrator.svg" class="icone">
+                <p class="descricaocontainer21">ILLUSTRATOR</p>
+                <p>Intermediário</p>
+            </div>
+
+            <div class="container213">
+                <img src="indesign.svg" class="icone">
+                <p class="descricaocontainer21">INDESIGN</p>
+                <p>Intermediário</p>
+            </div>
+        </div>
+        
+    </div>
+    
+    <div id="container4">
+        <div id="container41">
+            <h1 class="titulo">CONTATO</h1>
+            <p class="subtitulo">Se você tem alguma dúvida sobre meu serviço, fique à vontade de me contatar pelo e-mail!</p>
+        </div>
+        <div id="container42">
+            <a href="mailto:edmundomsj@outlook.com?subject=Olá,%20Edmundo!"><img src="email.svg" class="icone"></a>
         </div>
     </div>
-    </div>
+</div>
 </body>
 </html>
